fix: fix body overflow and replace class App into index.ts

--- a/src/components/header/burger-menu/burger-menu.scss
+++ b/src/components/header/burger-menu/burger-menu.scss
@@ -38,9 +38,6 @@
 }
 
 body {
-  position: relative;
-  overflow-x: hidden;
-
   & .blur {
     position: absolute;
     content: '';
