--- a/src/components/header/header-nav/header-nav.scss
+++ b/src/components/header/header-nav/header-nav.scss
@@ -1,21 +1,25 @@
 .header {
+  @include tablet {
+    position: relative;
+  }
+
   &__menu {
     background-color: white;
 
     @include tablet {
       & {
-        position: absolute;
+        position: fixed;
         top: 0;
-        right: 0;
-        transform: translateX(320px);
+        right: -400px;
         width: 320px;
-        height: 100%;
+        height: 100vh;
         z-index: 20;
-        transition: transform 0.3s ease;
+        transition: right 0.3s ease;
       }
 
       &_opened {
-        transform: translateX(0);
+        position: absolute;
+        right: 0;
       }
     }
   }
